Criando navegação entre páginas do delivery.

--- a/src/app/pages/main/home/delivery/delivery-details.component.html
+++ b/src/app/pages/main/home/delivery/delivery-details.component.html
@@ -1,15 +1,11 @@
-<ion-header>
+<ion-header translucent>
     <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-back-button defaultHref="/" text="&#60;" mode="ios" icon="add"></ion-back-button>
-      </ion-buttons>
-      <ion-title>
-        {{ delivery.name }}
-      </ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/"></ion-back-button>
+        </ion-buttons>
+        <ion-title>{{ delivery.name }}</ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content padding>
-    <ion-backdrop></ion-backdrop>
-    <p>this is a ion-back-button example.</p>
-  </ion-content>
+</ion-header>
+<ion-content fullscreen class="ion-padding">
+    <p>Back-Button is displayed when there is history</p>
+</ion-content>
