--- a/src/app/pages/main/home/deliveries-list.component.html
+++ b/src/app/pages/main/home/deliveries-list.component.html
@@ -9,11 +9,11 @@
 <ion-content>
 	<ion-list>
 		<ion-item-sliding *ngFor="let item of items; let i = index">
-			<ion-item detail='true'>
+			<ion-item detail='true' [routerLink]="['delivery-details/' + item.id]">
 				<ion-icon name="person" slot='start'></ion-icon>
 				<ion-label class="ion-text-wrap">
 					<ion-text>{{item.name}}</ion-text>
-					<p>{{helper.toServicesFormat(item)}}</p>
+					<p>{{toServicesFormat(item)}}</p>
 					<p>{{item.rating}}</p>
 				</ion-label>
 			</ion-item>
