--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,9 +1,9 @@
 <ion-tabs>
 
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="/">
+      <ion-tab-button tab="deliveries">
         <ion-icon name="flash"></ion-icon>
-        <ion-label>Home</ion-label>
+        <ion-label>Início</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
