--- a/src/app/pages/main/home/delivery/details.component.html
+++ b/src/app/pages/main/home/delivery/details.component.html
@@ -20,14 +20,14 @@
         </label>
         <hr>
         
-        
         <div class="delivery-group-list">
-            <mat-card *ngFor="let prod of group.products">
+            <mat-card *ngFor="let prod of group.products" [routerLink]="'/deliveries/buy/' + prod.id">
                 <mat-card-title-group>
                     <mat-card-title>{{prod.name}}</mat-card-title>
                     <mat-card-subtitle>{{prod.description}}</mat-card-subtitle>
                     <img mat-card-sm-image *ngIf="prod.image != null" src="assets/images/temp/{{prod.image}}">
                 </mat-card-title-group>
+                <div class="price">R$ {{prod.price}}</div>
             </mat-card>
         </div>
     </div>
