--- a/src/app/pages/main/home/delivery/details.component.scss
+++ b/src/app/pages/main/home/delivery/details.component.scss
@@ -1,6 +1,7 @@
 tabbed-navigator.can-go-back ion-back-button { display: block; }
 
 ion-content {
+    background-color: lightgray;
     p {
         padding: 0rem 2rem 0rem 2rem;
         font-size: small;
@@ -11,7 +12,7 @@ ion-content {
 }
 
 #logo {
-    width: 30%;
+    width: 15%;
     float: right;
     margin: -20px 0 0 0;
 }
@@ -26,21 +27,32 @@ ion-content {
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: lightgray;
     mat-card {
-        min-height: 112px;
+        min-width: 300px;
         width: 95%;
         height: 95%;
-        background-color: white;
+        min-height: 112px;
+        background-color: rgba(245, 245, 240, 0.5);
         margin: 2%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        cursor: pointer;
     };
     .mat-card-sm-image {
         object-fit: cover;
+    }
+    .price {
+        position: absolute;
+        bottom: 12%;
+        font-size: medium;
+        font-weight: lighter;
     }
 }
 
 @media only screen and (max-width: 640px) {
     .delivery-group-list {
         flex-direction: column;
+    }
+    #logo {
+        width: 30%;
     }
 }  
