--- a/src/app/pages/main/home/delivery/buy.component.scss
+++ b/src/app/pages/main/home/delivery/buy.component.scss
@@ -1,5 +1,9 @@
 ion-content {
     background-color: lightgray;
+    img {
+        border: 10px solid transparent;
+        border-radius: 30px;
+    }
 }
 
 ion-list-header.optional {
@@ -12,12 +16,28 @@ ion-list-header.required {
     color: white;
 }
 
-.title {
-    padding: 1rem 0rem 1rem 2rem;
-    font-size: large;
-    font-weight: bolder;
+.product-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .title {
+        padding-left: 1rem;
+        font-size: large;
+        font-weight: bolder;
+        .subtitle {
+            font-size: 70%;
+            color: gray;
+        }
+    }
     .subtitle {
-        font-size: 70%;
-        color: gray;
+        font-weight: normal;
+    }
+    .price {
+        font-weight: bolder;
+        width: 20%;
+        height: 100%;
+        text-align: right;
+        padding-right: 1em;
     }
 }
