--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,12 +1,9 @@
 <ion-tabs>
-
-    <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="deliveries">
+    <ion-tab-bar *ngIf="showTabBar" slot="bottom">
+        <ion-tab-button tab="/deliveries">
         <ion-icon name="flash"></ion-icon>
         <ion-label>Início</ion-label>
-      </ion-tab-button>
-
+        </ion-tab-button>
     </ion-tab-bar>
-  
-  </ion-tabs>
+</ion-tabs>
   
