--- a/src/app/pages/main/home/delivery/buy.component.scss
+++ b/src/app/pages/main/home/delivery/buy.component.scss
@@ -41,3 +41,8 @@ ion-list-header.required {
         padding-right: 1em;
     }
 }
+
+ion-footer {
+    padding-left: 10px;
+    padding-right: 10px;
+}
