Inclusão de nova aba para os pedidos realizados.

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,8 +1,12 @@
 <ion-tabs>
     <ion-tab-bar *ngIf="showTabBar" slot="bottom">
-        <ion-tab-button tab="/deliveries">
-        <ion-icon name="flash"></ion-icon>
-        <ion-label>Início</ion-label>
+        <ion-tab-button tab="deliveries">
+            <ion-icon name="home"></ion-icon>
+            <ion-label>Início</ion-label>
+        </ion-tab-button>
+        <ion-tab-button tab="orders">
+            <ion-icon name="document-text-outline"></ion-icon>
+            <ion-label>Pedidos</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
