--- a/src/app/pages/main/home/delivery/details.component.html
+++ b/src/app/pages/main/home/delivery/details.component.html
@@ -10,7 +10,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content>
-    <img src="/assets/images/temp/company.png" alt="Photo of Cthulu" id="logo" />
+    <img src="/assets/images/temp/company.png" id="logo" />
     <p innerHtml="{{delivery.description}}"></p>
     
     <div *ngFor="let group of groups">
@@ -20,15 +20,17 @@
         </label>
         <hr>
         
-        <div class="delivery-group-list">
-            <mat-card *ngFor="let prod of group.products" [routerLink]="'/app/deliveries/buy/' + prod.id">
-                <mat-card-title-group>
-                    <mat-card-title>{{prod.name}}</mat-card-title>
-                    <mat-card-subtitle>{{prod.description}}</mat-card-subtitle>
-                    <img mat-card-sm-image *ngIf="prod.image != null" src="assets/images/temp/{{prod.image}}">
-                </mat-card-title-group>
-                <div class="price">R$ {{prod.price}}</div>
-            </mat-card>
+        <div class="delivery-group-list line">
+          <ion-card *ngFor="let prod of group.products" [routerLink]="'/app/deliveries/buy/' + prod.id">
+            <div class="delivery-group-list">
+              <img mat-card-sm-image *ngIf="prod.image" src="assets/images/temp/{{prod.image}}">
+              <ion-card-header>
+                <ion-card-title>{{prod.name}}</ion-card-title>
+                <ion-card-subtitle>{{prod.description}}</ion-card-subtitle>
+              </ion-card-header>
+              <div slot="end" class="price">R$ {{prod.price}}</div>
+            </div>
+          </ion-card>
         </div>
     </div>
 
