--- a/src/app/pages/main/home/delivery/list.component.html
+++ b/src/app/pages/main/home/delivery/list.component.html
@@ -7,7 +7,31 @@
 </ion-header>
 
 <ion-content>
-	<ion-list>
+  <div class="delivery-group-list">
+    <!-- <mat-card *ngFor="let item of listDeliveries; let i = index" [routerLink]="'details/' + item.id">
+      <img mat-card-sm-image src="/assets/images/temp/company.png">
+      <mat-card-title-group>
+        <mat-card-title>{{item.name}}</mat-card-title>
+        <mat-card-subtitle>
+          <ion-icon name="star"></ion-icon>{{item.rating}} | {{toServicesFormat(item)}}
+        </mat-card-subtitle>
+        <ion-card-content>{{item.description}}</ion-card-content>
+      </mat-card-title-group>
+    </mat-card> -->
+    <ion-card *ngFor="let item of listDeliveries; let i = index" [routerLink]="'details/' + item.id">
+      <div class="delivery-group-list">
+        <img mat-card-sm-image src="/assets/images/temp/company.png">
+        <ion-card-header>
+          <ion-card-title>{{item.name}}</ion-card-title>
+          <ion-card-subtitle>
+            <ion-icon name="star"></ion-icon>{{item.rating}} | {{toServicesFormat(item)}}
+          </ion-card-subtitle>
+        </ion-card-header>
+      </div>
+      <ion-card-content innerHtml="{{item.description}}"></ion-card-content>
+    </ion-card>
+  </div>
+	<!-- <ion-list>
         <ion-item-sliding *ngFor="let item of listDeliveries; let i = index">
             <ion-item detail='true' [routerLink]="'details/' + item.id">
                 <ion-icon name="person" slot='start'></ion-icon>
@@ -17,9 +41,9 @@
                     <p>{{item.rating}}</p>
                 </ion-label>
             </ion-item>
-            <!-- <ion-item-options side="end">
+            <ion-item-options side="end">
                 <ion-item-option color="danger" (click)="delete(i)">Delete</ion-item-option>
-            </ion-item-options> -->
+            </ion-item-options>
         </ion-item-sliding>
-    </ion-list>
+    </ion-list> -->
 </ion-content>
