--- a/src/app/pages/main/home/delivery/details.component.scss
+++ b/src/app/pages/main/home/delivery/details.component.scss
@@ -33,7 +33,6 @@ ion-content {
       padding: 0.5em;
       height: 125px;
       width: 300px;
-      max-width: 100%;
       max-height: 100%;
       
       .mat-card-sm-image {
@@ -68,11 +67,13 @@ ion-content {
   }
   
 @media only screen and (max-width: 640px) {
-    .delivery-group-list.line {
-        flex-direction: column;
-    }
+  .delivery-group-list {
     ion-card {
-      flex-direction: column;
+      width: auto;
+    }
+  }
+  .delivery-group-list.line {
+        flex-direction: column;
     }
     #logo {
         width: 30%;
