--- a/src/app/pages/main/home/delivery/list.component.scss
+++ b/src/app/pages/main/home/delivery/list.component.scss
@@ -35,3 +35,14 @@ ion-content {
       width: 100%;
     }
 }
+
+@media only screen and (max-width: 640px) {
+  .delivery-group-list {
+    flex-direction: column;
+    padding-left: 1em;
+    padding-right: 1em;
+    ion-card {
+      width: 100%;
+    }
+  }
+}
