--- a/src/app/pages/main/home/delivery/details.component.scss
+++ b/src/app/pages/main/home/delivery/details.component.scss
@@ -31,13 +31,14 @@ ion-content {
       flex-direction: column;
       cursor: pointer;
       padding: 0.5em;
-      height: 125px;
       width: 300px;
       max-height: 100%;
       
       .mat-card-sm-image {
         object-fit: cover;
         width: 10em;
+        height: 100%;
+        padding-bottom: 1em;
       }
       ion-card-title {
         font-size: larger;
