--- a/src/app/pages/main/home/delivery/list.component.scss
+++ b/src/app/pages/main/home/delivery/list.component.scss
@@ -44,5 +44,8 @@ ion-content {
     ion-card {
       width: 100%;
     }
+    .delivery-group-list.details {
+      flex-direction: row;
+    }
   }
 }
