--- a/src/app/pages/main/home/delivery/details.component.html
+++ b/src/app/pages/main/home/delivery/details.component.html
@@ -23,8 +23,8 @@
         <div class="delivery-group-list line">
           <ion-card *ngFor="let prod of group.products" [routerLink]="'/app/deliveries/buy/' + prod.id">
             <div class="delivery-group-list details">
-              <div>
-                <img mat-card-sm-image *ngIf="prod.image" src="assets/images/temp/{{prod.image}}">
+              <div *ngIf="prod.image">
+                <img mat-card-sm-image src="assets/images/temp/{{prod.image}}">
               </div>
               <ion-card-header>
                 <ion-card-title>{{prod.name}}</ion-card-title>
@@ -33,7 +33,7 @@
               <img *ngIf="prod.sale" class="tag-price" src="assets/images/icons/tag-price-hot.png">
             </div>
             <div class="price">
-              R$ {{prod.price}}
+              {{prod.price | $}}
             </div>
           </ion-card>
         </div>
