Finalizando o básico do template, com todas as telas.

--- a/src/app/pages/main/home/delivery/buy.component.html
+++ b/src/app/pages/main/home/delivery/buy.component.html
@@ -30,7 +30,7 @@
         </div>
         <ion-icon name="arrow-forward"></ion-icon>
         <div class="price steps">
-          <div>R$ {{product.price | number}}</div>
+          <div>{{product.price | $}}</div>
         </div>
       </div>
 
