--- a/src/app/pages/main/home/delivery/list.component.scss
+++ b/src/app/pages/main/home/delivery/list.component.scss
@@ -26,6 +26,7 @@ ion-content {
       width: 100%;
       ion-card-title{
         font-size: larger;
+        font-weight: 600;
       }
       ion-card-subtitle {
         font-size: smaller;
