--- a/src/app/pages/main/home/delivery/buy.component.html
+++ b/src/app/pages/main/home/delivery/buy.component.html
@@ -10,7 +10,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-    <div [formGroup]="productForm">
+    <div class="product-content" [formGroup]="productForm">
       <div class="product-header">
         <div class="delivery steps">
           <img class="contentPicture" src="/assets/images/temp/company.png">
