--- a/src/app/pages/main/home/delivery/buy.component.scss
+++ b/src/app/pages/main/home/delivery/buy.component.scss
@@ -73,6 +73,8 @@ ion-footer {
 
 @media only screen and (max-width: 640px) {
   .product-header{
+    padding: 1em;
+    
     .delivery {
       display: none;
     }
