--- a/src/app/pages/main/home/delivery/details.component.scss
+++ b/src/app/pages/main/home/delivery/details.component.scss
@@ -49,7 +49,7 @@ ion-content {
       .price {
         align-items: center;
         font-size: medium;
-        font-weight: lighter;
+        font-weight: 600;
         text-align: center;
       }
       .tag-price{
